[project]
name = "videotransition"
description = "A video transition effects plugin implemented using a Chromium headless browser and Python."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["playwright>=1.40.0", "Pillow>=10.0.0", "torch>=2.0.0", "numpy>=1.24.0"]

[project.urls]
Repository = "https://github.com/yichengup/ComfyUI-VideoTransition"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/yichengup/ComfyUI-VideoTransition/wiki"
"Bug Tracker" = "https://github.com/yichengup/ComfyUI-VideoTransition/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-VideoTransition"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

